<!--
  Copyright 2014 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<com.djandroid.jdroid.materialdesign.googleio.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true"
    android:overScrollMode="never">

    <FrameLayout
        android:id="@+id/scroll_view_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <!-- Background photo -->
        <FrameLayout
            android:id="@+id/session_photo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/session_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/my_pic" />


        </FrameLayout>



        <LinearLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/session_details_extra_space_bottom"
            android:paddingRight="@dimen/keyline_1"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/live_now_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:visibility="gone" />

            <TextureView
                android:id="@+id/give_feedback_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/time_hint"
                style="@style/SessionTimeHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:text="@string/long_text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/session_abstract"
                style="@style/TextBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:text="@string/long_text" />

            <TextView
                android:id="@+id/plus_one_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"

                android:layout_marginRight="16dp"
                android:clickable="true"
                android:focusable="true" />

            <HorizontalScrollView
                android:id="@+id/session_tags_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:fadingEdgeLength="16dp"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/session_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/session_speakers_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/session_speakers_header"
                    style="@style/SessionDetailSectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/keyline_2_session_detail"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/session_speakers" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/session_requirements_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/session_requirements_header"
                    style="@style/SessionDetailSectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/session_requirements" />

                <TextView
                    android:id="@+id/session_requirements"
                    style="@style/TextBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/element_spacing_normal"
                    android:layout_marginTop="@dimen/element_spacing_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/related_videos_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/related_videos_header"
                    style="@style/SessionDetailSectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/keyline_2_session_detail"
                    android:text="@string/related_videos" />
            </LinearLayout>

            <TextView
                android:id="@+id/session_links_header"
                style="@style/SessionDetailSectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginTop="@dimen/element_spacing_normal"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/session_links"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/links_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:orientation="vertical" />

            <TextView
                android:id="@android:id/empty"
                style="@style/EmptyText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty_session_detail"
                android:visibility="gone" />


        </LinearLayout>

        <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
        <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
        <LinearLayout
            android:id="@+id/header_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <include layout="@layout/toolbar_actionbar" />

            <!-- Session title -->
            <TextView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginRight="@dimen/keyline_1"
                android:text=""
                android:id="@+id/session_title"
                android:maxLines="4"
                android:ellipsize="end"
                android:textSize="@dimen/text_size_large"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/body_text_1_inverse"
                android:textAlignment="viewStart" />

            <!-- Session subtitle -->
            <TextView android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/keyline_2_session_detail"
                android:layout_marginRight="@dimen/keyline_1"
                android:id="@+id/session_subtitle"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textColor="@color/body_text_2_inverse"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <!-- FAB -->
        <include layout="@layout/include_add_schedule_fab" />

    </FrameLayout>

</com.djandroid.jdroid.materialdesign.googleio.ObservableScrollView>
